# awsui

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: audit.yaml  ci.yaml  release.yaml
docs/: architecture.md  detailed-design.md
src/: action.rs  app.rs  cli.rs  clients.rs  config.rs  error.rs  event.rs  fuzzy.rs  lib.rs  loader.rs  main.rs  recent.rs  rendering.rs  service.rs  sso.rs  tab.rs  ui_state.rs
src/app/: crud.rs  mod.rs  tests.rs
src/aws/: client.rs  cloudwatch_client.rs  cloudwatch_model.rs  ecr_client.rs  ecr_model.rs  ecs_client.rs  ecs_model.rs  logs_client.rs  logs_model.rs  mock_clients.rs  mock_data.rs  mod.rs  model.rs  s3_client.rs  s3_model.rs  secrets_client.rs  secrets_model.rs  vpc_client.rs  vpc_model.rs
src/effects/: crud.rs  log.rs  mod.rs  terminal.rs
src/tui/: input.rs  mod.rs  theme.rs
src/tui/components/: container_picker.rs  dialog.rs  form_dialog.rs  help.rs  list_selector.rs  loading.rs  mod.rs  service_picker.rs  status_bar.rs  tab_bar.rs  table.rs
src/tui/views/: dashboard.rs  ec2_detail.rs  ec2_list.rs  ecr_detail.rs  ecr_list.rs  ecs_detail.rs  ecs_list.rs  ecs_log.rs  ecs_service_detail.rs  ecs_task_detail.rs  mod.rs  profile_select.rs  s3_detail.rs  s3_list.rs  s3_preview.rs  secrets_detail.rs  secrets_list.rs  service_select.rs  vpc_detail.rs  vpc_list.rs
tests/e2e/: common.rs  main.rs  test_dashboard.rs  test_ec2.rs  test_ecr.rs  test_ecs.rs  test_s3.rs  test_secrets.rs  test_tabs.rs  test_vpc.rs
(+39 files in other folders)
