[package]
name = "awsui"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
clap = { version = "4", features = ["derive"] }
cli-clipboard = "0.4"
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
insta = "1.46"
mockall = "0.13"
pretty_assertions = "1"
rstest = "0.26"
