[package]
name = "awsui"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-ecr = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ecs = "1"
aws-sdk-s3 = "1"
aws-sdk-secretsmanager = "1"
clap = { version = "4", features = ["derive"] }
cli-clipboard = "0.4"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
nucleo = "0.5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1_smol = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tui-input = { version = "0.14.0", features = ["crossterm"] }

[features]
mock-data = []

[dev-dependencies]
insta = "1.46"
mockall = "0.14"
portable-pty = "0.8"
pretty_assertions = "1"
rstest = "0.26"
vt100 = "0.15"
